Task editor: improve selection strategy

Try hard to always have current index also selected.
This makes it easier for the user to see where new nodes
will be inserted.
BUG:277297